# labFour_OrchestraModel

./: CMakeLists.txt  README.md  conductor.cpp  conductor.h  jupiter.cpp  jupiter.h  leCygne.cpp  leCygne.h  main  main.cpp  newWorldSymphony.cpp  newWorldSymphony.h  orchestra.cpp  orchestra.h  song.cpp  song.h  songChoice.cpp  songChoice.h  time.cpp  time.h
